--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.5.1",
+    "@types/node-cron": "^3.0.8",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.15",
