--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node-cron": "^3.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
