--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "sharp": "^0.32.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
