--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "firebase": "^10.13.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
